# sbwa-buildIndex

./: CMakeLists.txt  ZEBRA  build.sh  buildIndexMain.cpp  ckandmain.sh  naiveBwt.h  naiveFastSort.h  run.sh  sBwt.h  verification.h
genomes/: genRandDnas.py  rand.fa  test1.fa
release/: ZEBRA
script/efficent/: mbwa.py  nFS  sp.py  testbwa.py
script/efficent/cppTest/: ckandrun.sh  main.cpp  naiveFastSort.h  run.sh
script/verify/: bwa.py  ckWithPy.sh  genRandDnas.py  nFS  sbwt.py  sp.py  testbwa.py
test/: <F5>  asdasd  main  naiveFastSort.h  run.sh
